# M365-Release-to-Confluence

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  roadmap.drawio  setup.sh
.github/workflows/: ci-python.yml
claude/projects/: JIRA_WeeklyUpdater.md  M365-Release-to-Confluence.md  oneuptime.md
src/m365_confluence/: __init__.py  catalog.py  changelog.py  cli.py  config.py  confluence_macros.py  drawio.py  filters.py  models.py  pipeline.py  quarters.py  reporting.py  review.py  services.py  state.py  storage.py  timeline_cli.py
src/m365_confluence/ai/: __init__.py  base.py  factory.py  processor.py  prompts.py  providers.py
src/m365_confluence/confluence/: __init__.py  atlassian_client.py  client.py
src/m365_confluence/sources/: __init__.py  aggregate.py  base.py  message_center.py  roadmap.py
src/m365_confluence/ui/: __init__.py  app.py  view.py
src/m365_confluence/ui/static/design-system/: base.css  bundle.css  components.css  shell.css  tokens.css
src/m365_confluence/ui/static/module/: m365.css  m365.js
tests/: test_aggregate.py  test_catalog.py  test_changelog.py  test_cli_select.py  test_config.py  test_confluence.py  test_drawio.py  test_factory.py  test_filters.py  test_processor.py  test_products.py  test_prompts.py  test_quarters.py  test_reporting.py  test_review.py  test_services.py  test_sources.py  test_state.py  test_ui.py
