[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m365-release-to-confluence"
version = "1.0.0"
description = "Read current changes and upcoming rollouts from the Microsoft 365 platform, summarise them with an LLM, and publish them to Confluence following your standards."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
ui = ["fastapi>=0.110", "uvicorn>=0.29"]
atlassian = ["atlassian-python-api>=3.41"]
all = [
    "anthropic>=0.40",
    "openai>=1.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "atlassian-python-api>=3.41",
]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "anthropic>=0.40",
    "openai>=1.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.scripts]
m365-to-confluence = "m365_confluence.cli:main"
m365-to-confluence-ui = "m365_confluence.ui.app:main"
m365-timeline = "m365_confluence.timeline_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the module UI bundle (vendored design-system + module assets) so a host
# that installs this package can serve the standalone view from the wheel.
"m365_confluence.ui" = ["static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/m365_confluence/ui/app.py" = ["E501"]
"src/m365_confluence/ui/view.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
